// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenu Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)>
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    size="medium"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "medium",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "medium",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    size="large"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "large",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "large",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    position="left"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "left",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "left",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    appearance="primary"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    appearance="secondary"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "secondary",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "secondary",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    color="red"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Action 1
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Action 1
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Action 2
        </DropdownItem>,
      ],
      "color": "red",
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 1",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 2",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Action 1
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Action 2
          </DropdownItem>,
        ],
        "color": "red",
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 1",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 2",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 8`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    activeColor="blue"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Action 1
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeColor": "blue",
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Action 1
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Action 2
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 1",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 2",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeColor": "blue",
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Action 1
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Action 2
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 1",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 2",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 9`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    open={true}
  >
    <DropdownTitle>
      You can't close me
    </DropdownTitle>
    <DropdownItem
      onClick={[Function]}
    >
      Action 1
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownTitle>
          You can't close me
        </DropdownTitle>,
        <DropdownItem
          onClick={[Function]}
        >
          Action 1
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Action 2
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "open": true,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "You can't close me",
        },
        "ref": null,
        "rendered": "You can't close me",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 1",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Action 2",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownTitle>
            You can't close me
          </DropdownTitle>,
          <DropdownItem
            onClick={[Function]}
          >
            Action 1
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Action 2
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "open": true,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "You can't close me",
          },
          "ref": null,
          "rendered": "You can't close me",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 1",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Action 2",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
